more processing beats on sensor

--- a/logstash/pipelines/beats/11_beats_logs.conf
+++ b/logstash/pipelines/beats/11_beats_logs.conf
@@ -120,8 +120,36 @@ filter {
       }
     }
 
-    mutate { id => "mutate_replace_agent_type_beats_heatbeat"
-             replace => { "[agent][type]" => "heatbeat" } }
+  } else if ("_malcolm_miscbeat" in [tags]) {
+
+    if ([fluentbit][input]) {
+      mutate { id => "mutate_replace_event_module_fluentbit_input"
+               replace => { "[event][module]" => "%{[fluentbit][input]}" } }
+    }
+
+    if ([date]) {
+      date {
+        id => "date_beats_miscbeat_fluentbit_date"
+        match => [ "[date]", "UNIX" ]
+        target => "[@timestamp]"
+        remove_field => [ "[date]" ]
+      }
+    }
+
+    if (![event][hash]) {
+      fingerprint {
+        id => "fingerprint_malcolm_beats_miscbeat"
+        source => [ "[host][name]",
+                    "[agent][type]",
+                    "[event][module]",
+                    "[@timestamp]" ]
+        concatenate_sources => true
+        # uses event.hash
+        ecs_compatibility => "v8"
+        method => "MURMUR3_128"
+        base64encode => true
+      }
+    }
 
   } # event.module (nginx/auditd/etc.)
 
