more beats work

--- a/logstash/pipelines/beats/11_beats_logs.conf
+++ b/logstash/pipelines/beats/11_beats_logs.conf
@@ -105,12 +105,12 @@ filter {
       fingerprint {
         id => "fingerprint_malcolm_beats_heatbeat"
         source => [ "[host][name]",
-                    "[sensors][adapter]",
-                    "[sensors][class]",
-                    "[sensors][label]",
-                    "[sensors][name]",
-                    "[sensors][units]",
-                    "[sensors][value]",
+                    "[heatbeat][sensors][adapter]",
+                    "[heatbeat][sensors][class]",
+                    "[heatbeat][sensors][label]",
+                    "[heatbeat][sensors][name]",
+                    "[heatbeat][sensors][units]",
+                    "[heatbeat][sensors][value]",
                     "[@timestamp]" ]
         concatenate_sources => true
         # uses event.hash
@@ -122,17 +122,17 @@ filter {
 
   } else if ("_malcolm_miscbeat" in [tags]) {
 
-    if ([fluentbit][input]) {
+    if ([miscbeat][fluentbit][input]) {
       mutate { id => "mutate_replace_event_module_fluentbit_input"
-               replace => { "[event][module]" => "%{[fluentbit][input]}" } }
+               replace => { "[event][module]" => "%{[miscbeat][fluentbit][input]}" } }
     }
 
     if ([date]) {
       date {
         id => "date_beats_miscbeat_fluentbit_date"
-        match => [ "[date]", "UNIX" ]
+        match => [ "[miscbeat][date]", "UNIX" ]
         target => "[@timestamp]"
-        remove_field => [ "[date]" ]
+        remove_field => [ "[miscbeat][date]" ]
       }
     }
 
