work in progress on sensor beats -> (fluentbit)?

--- a/logstash/pipelines/beats/11_beats_logs.conf
+++ b/logstash/pipelines/beats/11_beats_logs.conf
@@ -122,14 +122,15 @@ filter {
 
   } else if ("_malcolm_miscbeat" in [tags]) {
 
-    if ([miscbeat][fluentbit][input]) {
-      mutate { id => "mutate_replace_event_module_fluentbit_input"
-               replace => { "[event][module]" => "%{[miscbeat][fluentbit][input]}" } }
+    if ([miscbeat][module]) {
+      mutate { id => "mutate_replace_event_module_miscbeat_module"
+               replace => { "[event][module]" => "%{[miscbeat][module]}" }
+               remove_field => [ "[miscbeat][module]" ] }
     }
 
-    if ([date]) {
+    if ([miscbeat][date]) {
       date {
-        id => "date_beats_miscbeat_fluentbit_date"
+        id => "date_beats_miscbeat_date"
         match => [ "[miscbeat][date]", "UNIX" ]
         target => "[@timestamp]"
         remove_field => [ "[miscbeat][date]" ]
