Get fluentbit syslog

--- a/sensor-iso/interface/sensor_ctl/control_vars.conf
+++ b/sensor-iso/interface/sensor_ctl/control_vars.conf
@@ -111,6 +111,8 @@ export AUTOSTART_AUDITBEAT=false
 export AUTOSTART_CLAMAV_UPDATES=false
 export AUTOSTART_FILEBEAT=false
 export AUTOSTART_FLUENTBIT_METRIC=false
+export AUTOSTART_FLUENTBIT_NETIF=false
+export AUTOSTART_FLUENTBIT_SYSLOG=false
 export AUTOSTART_HEATBEAT=false
 export AUTOSTART_HEATBEAT_SENSORS=false
 export AUTOSTART_METRICBEAT=false
