more work in progress on the dashboards for hedgehog

--- a/logstash/pipelines/beats/11_beats_logs.conf
+++ b/logstash/pipelines/beats/11_beats_logs.conf
@@ -137,6 +137,12 @@ filter {
       }
     }
 
+    if ([event][module] == "syslog") {
+      # time gets parsed into the miscbeat.date field, this is redundant
+      mutate { id => "mutate_miscbeat_remove_syslog_time"
+               remove_field => [ "[miscbeat][time]" ] }
+    }
+
     if (![event][hash]) {
       fingerprint {
         id => "fingerprint_malcolm_beats_miscbeat"
