--- a/sensor-iso/interface/sensor_ctl/supervisor.d/fluentbit-syslog.conf
+++ b/sensor-iso/interface/sensor_ctl/supervisor.d/fluentbit-syslog.conf
@@ -4,7 +4,7 @@ command=/opt/fluent-bit/bin/fluent-bit
   -p Mode=udp
   -p Listen=127.0.0.1
   -p Port=9514
-  -p Parser=syslog-rfc3164-local
+  -p Parser=syslog-rfc3164
   -p Buffer_Chunk_Size=32000
   -p Buffer_Max_Size=64000
   -o tcp://localhost:%(ENV_MISCBEAT_PORT)s
