--- a/logstash/pipelines/beats/11_beats_logs.conf
+++ b/logstash/pipelines/beats/11_beats_logs.conf
@@ -55,30 +55,6 @@ filter {
       }
     }
 
-  } else if ([agent][type] == "filebeat") and ([input][type] == "syslog") {
-
-    if (![event][hash]) {
-      fingerprint {
-        id => "fingerprint_malcolm_beats_filebeat_syslog"
-        source => [ "[host][name]",
-                    "[event][module]",
-                    "[syslog][facility]",
-                    "[syslog][priority]",
-                    "[process][program]",
-                    "[event][original]",
-                    "[process][pid]",
-                    "[@timestamp]" ]
-        concatenate_sources => true
-        # uses event.hash
-        ecs_compatibility => "v8"
-        method => "MURMUR3_128"
-        base64encode => true
-      }
-    }
-
-    mutate { id => "mutate_replace_agent_type_beats_filebeat_syslog"
-             replace => { "[agent][type]" => "syslog" } }
-
   } else if ([agent][type] == "metricbeat") {
 
     if (![event][hash]) {
@@ -141,6 +117,43 @@ filter {
       # time gets parsed into the miscbeat.date field, this is redundant
       mutate { id => "mutate_miscbeat_remove_syslog_time"
                remove_field => [ "[miscbeat][time]" ] }
+
+      # rename fields according to ECS
+      mutate { id => "mutate_rename_miscbeat_syslog"
+               rename => { "[miscbeat][ident]" => "[log][syslog][appname]" }
+               rename => { "[miscbeat][pid]" => "[log][syslog][procid]" }
+               rename => { "[miscbeat][pri]" => "[log][syslog][priority]" }
+               rename => { "[miscbeat][message]" => "[event][original]" }
+               rename => { "[miscbeat][host]" => "[log][syslog][hostname]" }
+      }
+
+      if ([log][syslog][priority]) {
+        ruby {
+          id => "ruby_log_syslog_priority_convert"
+          code => "
+            if pri = event.get('[log][syslog][priority]').to_i then
+              event.set('[log][syslog][severity][code]', pri % 8)
+              event.set('[log][syslog][facility][code]', pri / 8)
+            end"
+        }
+        if ([log][syslog][severity][code]) {
+          translate {
+            id => "translate_sensor_syslog_severity_code"
+            source => "[log][syslog][severity][code]"
+            target => "[log][syslog][severity][name]"
+            dictionary_path => "/etc/syslog_severity_levels.yaml"
+          }
+        }
+        if ([log][syslog][facility][code]) {
+          translate {
+            id => "translate_sensor_syslog_facility_code"
+            source => "[log][syslog][facility][code]"
+            target => "[log][syslog][facility][name]"
+            dictionary_path => "/etc/syslog_facility_codes.yaml"
+          }
+        }
+      }
+
     }
 
     if (![event][hash]) {
