--- a/sensor-iso/interface/sensor_ctl/supervisor.d/beats.conf
+++ b/sensor-iso/interface/sensor_ctl/supervisor.d/beats.conf
@@ -1,5 +1,5 @@
 [group:beats]
-programs=filebeat,syslogbeat,metricbeat,auditbeat,heatbeat,sensors
+programs=filebeat,metricbeat,auditbeat,heatbeat,sensors
 
 [program:filebeat]
 environment=ZEEK_CAPTURE_PATH=%(ENV_ZEEK_LOG_PATH)s/logs/current,SURICATA_CAPTURE_PATH=%(ENV_ZEEK_LOG_PATH)s/suricata
@@ -10,15 +10,6 @@ stopasgroup=true
 killasgroup=true
 autostart=%(ENV_AUTOSTART_FILEBEAT)s
 directory=%(ENV_SUPERVISOR_PATH)s/filebeat
-
-[program:syslogbeat]
-command=bash -l %(ENV_SUPERVISOR_PATH)s/filebeat-syslog/sensor_filebeat-syslog_local.sh
-startsecs=5
-startretries=3
-stopasgroup=true
-killasgroup=true
-autostart=%(ENV_AUTOSTART_SYSLOGBEAT)s
-directory=%(ENV_SUPERVISOR_PATH)s/filebeat-syslog
 
 [program:metricbeat]
 command=bash -l %(ENV_SUPERVISOR_PATH)s/metricbeat/sensor_metricbeat_local.sh
