allow non-root fluent-bit to access audit.log for audit auditing

--- a/sensor-iso/interface/sensor_ctl/supervisor.d/fluentbit-syslog.conf
+++ b/sensor-iso/interface/sensor_ctl/supervisor.d/fluentbit-syslog.conf
@@ -1,5 +1,6 @@
 [program:fluentbit-syslog]
 command=/opt/fluent-bit/bin/fluent-bit
+  -R /etc/fluent-bit/parsers.conf
   -i syslog
   -p Mode=udp
   -p Listen=127.0.0.1
