more work in progress in beats -> fluentbit (removing auditbeat)

--- a/logstash/pipelines/beats/11_beats_logs.conf
+++ b/logstash/pipelines/beats/11_beats_logs.conf
@@ -1,9 +1,17 @@
+######################## # parsing of logs/metrics specific to the operation of
+#                          Malcolm and Hedgehog Linux itself (i.e., not captured
+#                          network traffic metadata, but operational metadata)
+#
+# Copyright (c) 2022 Battelle Energy Alliance, LLC.  All rights reserved.
+#######################
+
 filter {
 
   if ([agent][type] == "filebeat") and ([event][module] == "nginx") {
+    #############################################################################################################################
+    # nginx access and error logs
 
-    # event.hash will be done based on event.original in 98_finalize.conf
-
+    # parse log fields
     if ([event][dataset] == "nginx.access") {
       grok {
         id => "grok_beat_nginx_access"
@@ -21,6 +29,7 @@ filter {
       }
     }
 
+    # save nginx log timestamp over @timestamp
     if ([timestamp]) {
       date {
         id => "date_beats_nginx_timestamp"
@@ -30,32 +39,13 @@ filter {
       }
     }
 
+    # set agent.type to "nginx"
     mutate { id => "mutate_replace_agent_type_beats_filebeat_nginx"
              replace => { "[agent][type]" => "nginx" } }
 
-  } else if ([agent][type] == "auditbeat") {
-
-    if (![event][hash]) {
-      fingerprint {
-        id => "fingerprint_malcolm_beats_auditbeat"
-        source => [ "[host][name]",
-                    "[event][module]",
-                    "[event][kind]",
-                    "[event][category]",
-                    "[event][action]",
-                    "[auditd][session]",
-                    "[auditd][sequence]",
-                    "[process][pid]",
-                    "[@timestamp]" ]
-        concatenate_sources => true
-        # uses event.hash
-        ecs_compatibility => "v8"
-        method => "MURMUR3_128"
-        base64encode => true
-      }
-    }
-
   } else if ([agent][type] == "metricbeat") {
+    #############################################################################################################################
+    # metricbeat statistics (todo: soon to be replaced by fluentbit)
 
     if (![event][hash]) {
       fingerprint {
@@ -76,6 +66,8 @@ filter {
     }
 
   } else if ("_malcolm_heatbeat" in [tags]) {
+    #############################################################################################################################
+    # sensor temperature statistics (todo: investigate use of "sensors" to see if fluentbit's "therm" module is better or not)
 
     if (![event][hash]) {
       fingerprint {
@@ -97,13 +89,17 @@ filter {
     }
 
   } else if ("_malcolm_miscbeat" in [tags]) {
+    #############################################################################################################################
+    # misc. sensor metrics and logs from fluentbit received by protologbeat TCP
 
+    # set event.module to whatever we set "module" to when running fluentbit
     if ([miscbeat][module]) {
       mutate { id => "mutate_replace_event_module_miscbeat_module"
                replace => { "[event][module]" => "%{[miscbeat][module]}" }
                remove_field => [ "[miscbeat][module]" ] }
     }
 
+    # convert fluentbit's date field and save it to @timestamp
     if ([miscbeat][date]) {
       date {
         id => "date_beats_miscbeat_date"
@@ -113,20 +109,50 @@ filter {
       }
     }
 
-    if ([event][module] == "syslog") {
-      # time gets parsed into the miscbeat.date field, this is redundant
-      mutate { id => "mutate_miscbeat_remove_syslog_time"
-               remove_field => [ "[miscbeat][time]" ] }
+    if ([miscbeat][kmsg]) {
+      #-------------------------------------------------
+      # kmsg - https://docs.fluentbit.io/manual/pipeline/inputs/kernel-logs
+      mutate { id => "mutate_rename_miscbeat_kmsg"
+               rename => { "[miscbeat][kmsg][msg]" => "[event][original]" } }
 
-      # rename fields according to ECS
-      mutate { id => "mutate_rename_miscbeat_syslog"
-               rename => { "[miscbeat][ident]" => "[log][syslog][appname]" }
-               rename => { "[miscbeat][pid]" => "[log][syslog][procid]" }
-               rename => { "[miscbeat][pri]" => "[log][syslog][priority]" }
-               rename => { "[miscbeat][message]" => "[event][original]" }
-               rename => { "[miscbeat][host]" => "[log][syslog][hostname]" }
+      if (![event][hash]) {
+        fingerprint {
+          id => "fingerprint_malcolm_miscbeat_kmsg"
+          source => [ "[host][name]",
+                      "[event][module]",
+                      "[miscbeat][kmsg][sequence]",
+                      "[miscbeat][kmsg][priority]",
+                      "[event][original]",
+                      "[@timestamp]" ]
+          concatenate_sources => true
+          # uses event.hash
+          ecs_compatibility => "v8"
+          method => "MURMUR3_128"
+          base64encode => true
+        }
       }
 
+    } # if ([miscbeat][kmsg])
+
+    if ([miscbeat][syslog]) {
+      #-------------------------------------------------
+      # syslog - https://docs.fluentbit.io/manual/pipeline/inputs/syslog
+
+      # time gets parsed into the miscbeat.date field, this is redundant
+      mutate { id => "mutate_miscbeat_remove_syslog_time"
+               remove_field => [ "[miscbeat][syslog][time]" ] }
+
+      # rename syslog fields according to ECS
+      # https://www.elastic.co/guide/en/ecs/current/ecs-log.html#field-log-syslog
+      mutate { id => "mutate_rename_miscbeat_syslog"
+               rename => { "[miscbeat][syslog][ident]" => "[log][syslog][appname]" }
+               rename => { "[miscbeat][syslog][pid]" => "[log][syslog][procid]" }
+               rename => { "[miscbeat][syslog][pri]" => "[log][syslog][priority]" }
+               rename => { "[miscbeat][syslog][message]" => "[event][original]" }
+               rename => { "[miscbeat][syslog][host]" => "[log][syslog][hostname]" }
+      }
+
+      # convert syslog "priority" number to "severity" and "facility" and map to human-readable names
       if ([log][syslog][priority]) {
         ruby {
           id => "ruby_log_syslog_priority_convert"
@@ -154,23 +180,26 @@ filter {
         }
       }
 
-    }
-
-    if (![event][hash]) {
-      fingerprint {
-        id => "fingerprint_malcolm_beats_miscbeat"
-        source => [ "[host][name]",
-                    "[agent][type]",
-                    "[event][module]",
-                    "[@timestamp]" ]
-        concatenate_sources => true
-        # uses event.hash
-        ecs_compatibility => "v8"
-        method => "MURMUR3_128"
-        base64encode => true
+      if (![event][hash]) {
+        fingerprint {
+          id => "fingerprint_malcolm_miscbeat_syslog"
+          source => [ "[host][name]",
+                      "[event][module]",
+                      "[log][syslog][severity][code]",
+                      "[log][syslog][facility][code]",
+                      "[log][syslog][appname]",
+                      "[event][original]",
+                      "[@timestamp]" ]
+          concatenate_sources => true
+          # uses event.hash
+          ecs_compatibility => "v8"
+          method => "MURMUR3_128"
+          base64encode => true
+        }
       }
-    }
 
-  } # event.module (nginx/auditd/etc.)
+    } # if ([miscbeat][syslog])
+
+  } # event type (nginx, heatbeat, metricbeat, miscbeat, etc)
 
 }
