--- a/sensor-iso/interface/sensor_ctl/supervisor.d/fluentbit-metrics.conf
+++ b/sensor-iso/interface/sensor_ctl/supervisor.d/fluentbit-metrics.conf
@@ -5,59 +5,63 @@ programs=cpu,disk,mem,mem_p
 [program:cpu]
 command=/opt/fluent-bit/bin/fluent-bit
   -i cpu
-  -p Interval_Sec=%(ENV_FLUENTBIT_METRIC_INTERVAL)s
+  -p Interval_Sec=%(ENV_FLUENTBIT_METRICS_INTERVAL)s
   -o tcp://localhost:%(ENV_MISCBEAT_PORT)s
   -p format=json_lines
+  -F nest -p Operation=nest -p Nested_under=cpu -p WildCard='*' -m '*'
   -F record_modifier -p "Record=module cpu" -m '*'
   -f 1
 startsecs=20
 startretries=3
 stopasgroup=true
 killasgroup=true
-autostart=%(ENV_AUTOSTART_FLUENTBIT_METRIC)s
+autostart=%(ENV_AUTOSTART_FLUENTBIT_METRICS)s
 
 [program:disk]
 command=/opt/fluent-bit/bin/fluent-bit
   -i disk
-  -p Interval_Sec=%(ENV_FLUENTBIT_METRIC_INTERVAL)s
+  -p Interval_Sec=%(ENV_FLUENTBIT_METRICS_INTERVAL)s
   -o tcp://localhost:%(ENV_MISCBEAT_PORT)s
   -p format=json_lines
+  -F nest -p Operation=nest -p Nested_under=disk -p WildCard='*' -m '*'
   -F record_modifier -p "Record=module disk" -m '*'
   -f 1
 startsecs=20
 startretries=3
 stopasgroup=true
 killasgroup=true
-autostart=%(ENV_AUTOSTART_FLUENTBIT_METRIC)s
+autostart=%(ENV_AUTOSTART_FLUENTBIT_METRICS)s
 
 [program:mem]
 command=/opt/fluent-bit/bin/fluent-bit
   -i mem
-  -p Interval_Sec=%(ENV_FLUENTBIT_METRIC_INTERVAL)s
+  -p Interval_Sec=%(ENV_FLUENTBIT_METRICS_INTERVAL)s
   -o tcp://localhost:%(ENV_MISCBEAT_PORT)s
   -p format=json_lines
+  -F nest -p Operation=nest -p Nested_under=mem -p WildCard='*' -m '*'
   -F record_modifier -p "Record=module mem" -m '*'
   -f 1
 startsecs=20
 startretries=3
 stopasgroup=true
 killasgroup=true
-autostart=%(ENV_AUTOSTART_FLUENTBIT_METRIC)s
+autostart=%(ENV_AUTOSTART_FLUENTBIT_METRICS)s
 
 [program:mem_p]
 command=/opt/fluent-bit/bin/fluent-bit
   -i exec
   -p "command= /usr/local/bin/memory_usage_percentage.sh"
-  -p Interval_Sec=%(ENV_FLUENTBIT_METRIC_INTERVAL)s
+  -p Interval_Sec=%(ENV_FLUENTBIT_METRICS_INTERVAL)s
   -o tcp://localhost:%(ENV_MISCBEAT_PORT)s
   -p format=json_lines
   -F modify -p "Hard_rename=exec Mem.used_p" -m '*'
+  -F nest -p Operation=nest -p Nested_under=mem -p WildCard='*' -m '*'
   -F record_modifier -p "Record=module mem" -m '*'
   -f 1
 startsecs=20
 startretries=3
 stopasgroup=true
 killasgroup=true
-autostart=%(ENV_AUTOSTART_FLUENTBIT_METRIC)s
+autostart=%(ENV_AUTOSTART_FLUENTBIT_METRICS)s
 
 # netif is managed in a template per-interface (fluentbit-netif.template)
