--- a/sensor-iso/interface/sensor_ctl/supervisor.d/fluentbit-syslog.conf
+++ b/sensor-iso/interface/sensor_ctl/supervisor.d/fluentbit-syslog.conf
@@ -10,6 +10,7 @@ command=/opt/fluent-bit/bin/fluent-bit
   -p Buffer_Max_Size=64000
   -o tcp://localhost:%(ENV_MISCBEAT_PORT)s
   -p format=json_lines
+  -F nest -p Operation=nest -p Nested_under=syslog -p WildCard='*' -m '*'
   -F record_modifier -p "Record=module syslog" -m '*'
   -f 1
 startsecs=20
