--- a/sensor-iso/interface/sensor_ctl/supervisor.d/beats.conf
+++ b/sensor-iso/interface/sensor_ctl/supervisor.d/beats.conf
@@ -1,5 +1,5 @@
 [group:beats]
-programs=filebeat,metricbeat,auditbeat,heatbeat,sensors
+programs=filebeat,metricbeat,miscbeat,heatbeat,sensors
 
 [program:filebeat]
 environment=ZEEK_CAPTURE_PATH=%(ENV_ZEEK_LOG_PATH)s/logs/current,SURICATA_CAPTURE_PATH=%(ENV_ZEEK_LOG_PATH)s/suricata
@@ -19,15 +19,6 @@ stopasgroup=true
 killasgroup=true
 autostart=%(ENV_AUTOSTART_METRICBEAT)s
 directory=%(ENV_SUPERVISOR_PATH)s/metricbeat
-
-[program:auditbeat]
-command=bash -l %(ENV_SUPERVISOR_PATH)s/auditbeat/sensor_auditbeat_local.sh
-startsecs=5
-startretries=3
-stopasgroup=true
-killasgroup=true
-autostart=%(ENV_AUTOSTART_AUDITBEAT)s
-directory=%(ENV_SUPERVISOR_PATH)s/auditbeat
 
 [program:miscbeat]
 command=bash -l %(ENV_SUPERVISOR_PATH)s/miscbeat/sensor_miscbeat_local.sh
