audit logs via fluentbit dashboard

--- a/logstash/pipelines/beats/11_beats_logs.conf
+++ b/logstash/pipelines/beats/11_beats_logs.conf
@@ -7,6 +7,11 @@
 
 filter {
 
+  if (![host][name]) and ([agent][hostname]) {
+    mutate { id => "mutate_beats_add_field_host_name_agent_hostname"
+             add_field => { "[host][name]" => "%{[agent][hostname]}" } }
+  }
+
   if ([agent][type] == "filebeat") and ([event][module] == "nginx") {
     #############################################################################################################################
     # nginx access and error logs
@@ -108,6 +113,51 @@ filter {
         remove_field => [ "[miscbeat][date]" ]
       }
     }
+
+    if ([miscbeat][auditlog]) {
+      #-------------------------------------------------
+      # fluentbit tail of /var/log/audit/audit.log
+      # https://man7.org/linux/man-pages/man5/auditd.conf.5.html
+
+      ruby {
+        id => "ruby_miscbeat_auditlog_remove_empty_values"
+        path => "/usr/share/logstash/malcolm-ruby/compact_event.rb"
+      }
+
+      if ([miscbeat][auditlog][grantors]) {
+        mutate { id => "mutate_split_miscbeat_auditlog_grantors"
+                 split => { "[miscbeat][auditlog][grantors]" => "," } }
+      }
+
+      if (![miscbeat][auditlog][success]) and
+         ([miscbeat][auditlog][res] =~ /^success'?$/) {
+        mutate { id => "mutate_miscbeat_auditlog_res_success"
+                 add_field => { "[miscbeat][auditlog][success]" => "yes" }
+                 remove_field => [ "[miscbeat][auditlog][res]" ] }
+      }
+
+      if (![event][hash]) {
+        fingerprint {
+          id => "fingerprint_malcolm_miscbeat_auditlog"
+          source => [ "[host][name]",
+                      "[event][module]",
+                      "[miscbeat][auditlog][ses]",
+                      "[miscbeat][auditlog][type]",
+                      "[miscbeat][auditlog][SYSCALL]",
+                      "[miscbeat][auditlog][acct]",
+                      "[miscbeat][auditlog][UID]",
+                      "[miscbeat][auditlog][exe]",
+                      "[miscbeat][auditlog][msg]",
+                      "[@timestamp]" ]
+          concatenate_sources => true
+          # uses event.hash
+          ecs_compatibility => "v8"
+          method => "MURMUR3_128"
+          base64encode => true
+        }
+      }
+
+    } # if ([miscbeat][auditlog])
 
     if ([miscbeat][kmsg]) {
       #-------------------------------------------------
