sensor fluentbit work in progress

--- a/logstash/pipelines/beats/11_beats_logs.conf
+++ b/logstash/pipelines/beats/11_beats_logs.conf
@@ -70,29 +70,6 @@ filter {
       }
     }
 
-  } else if ("_malcolm_heatbeat" in [tags]) {
-    #############################################################################################################################
-    # sensor temperature statistics (todo: investigate use of "sensors" to see if fluentbit's "therm" module is better or not)
-
-    if (![event][hash]) {
-      fingerprint {
-        id => "fingerprint_malcolm_beats_heatbeat"
-        source => [ "[host][name]",
-                    "[heatbeat][sensors][adapter]",
-                    "[heatbeat][sensors][class]",
-                    "[heatbeat][sensors][label]",
-                    "[heatbeat][sensors][name]",
-                    "[heatbeat][sensors][units]",
-                    "[heatbeat][sensors][value]",
-                    "[@timestamp]" ]
-        concatenate_sources => true
-        # uses event.hash
-        ecs_compatibility => "v8"
-        method => "MURMUR3_128"
-        base64encode => true
-      }
-    }
-
   } else if ("_malcolm_miscbeat" in [tags]) {
     #############################################################################################################################
     # misc. sensor metrics and logs from fluentbit received by protologbeat TCP
@@ -184,6 +161,32 @@ filter {
 
     } # if ([miscbeat][kmsg])
 
+    if ([miscbeat][netif]) {
+      #-------------------------------------------------
+      # netif - https://docs.fluentbit.io/manual/pipeline/inputs/network-io-metrics
+
+      ruby {
+        id => "ruby_miscbeat_netif"
+        path => "/usr/share/logstash/malcolm-ruby/dotted_hash_unflatten.rb"
+        script_params => {
+          "source" => "[miscbeat][netif]"
+          "target" => "[miscbeat][network][details]"
+        }
+      }
+      if ([miscbeat][network][details]) {
+        mutate { id => "mutate_miscbeat_remove_netif"
+                 remove_field => [ "[miscbeat][netif]" ] }
+        ruby {
+          id => "ruby_miscbeat_network_details_sum"
+          code => "
+            if interfaces = event.get('[miscbeat][network][details]') then
+              event.set('[miscbeat][network][interface]', interfaces.keys)
+            end"
+         }
+      }
+
+    } # if ([miscbeat][netif])
+
     if ([miscbeat][syslog]) {
       #-------------------------------------------------
       # syslog - https://docs.fluentbit.io/manual/pipeline/inputs/syslog
@@ -250,6 +253,6 @@ filter {
 
     } # if ([miscbeat][syslog])
 
-  } # event type (nginx, heatbeat, metricbeat, miscbeat, etc)
+  } # event type (filebeat.nginx, metricbeat, miscbeat, etc)
 
 }
