--- a/sensor-iso/interface/sensor_ctl/supervisor.d/beats.conf
+++ b/sensor-iso/interface/sensor_ctl/supervisor.d/beats.conf
@@ -1,5 +1,5 @@
 [group:beats]
-programs=filebeat,metricbeat,miscbeat,heatbeat,sensors
+programs=filebeat,metricbeat,miscbeat
 
 [program:filebeat]
 environment=ZEEK_CAPTURE_PATH=%(ENV_ZEEK_LOG_PATH)s/logs/current,SURICATA_CAPTURE_PATH=%(ENV_ZEEK_LOG_PATH)s/suricata
@@ -28,20 +28,3 @@ stopasgroup=true
 killasgroup=true
 autostart=%(ENV_AUTOSTART_MISCBEAT)s
 directory=%(ENV_SUPERVISOR_PATH)s/miscbeat
-
-[program:heatbeat]
-command=bash -l %(ENV_SUPERVISOR_PATH)s/heatbeat/sensor_heatbeat_local.sh
-startsecs=5
-startretries=3
-stopasgroup=true
-killasgroup=true
-autostart=%(ENV_AUTOSTART_HEATBEAT)s
-directory=%(ENV_SUPERVISOR_PATH)s/heatbeat
-
-[program:sensors]
-command=/usr/bin/python3 /usr/local/bin/beat-log-temperature.py -p %(ENV_HEATBEAT_PORT)s -c 0 -s %(ENV_HEATBEAT_INTERVAL)s
-startsecs=5
-startretries=3
-stopasgroup=true
-killasgroup=true
-autostart=%(ENV_AUTOSTART_HEATBEAT_SENSORS)s
