--- a/logstash/pipelines/beats/11_beats_logs.conf
+++ b/logstash/pipelines/beats/11_beats_logs.conf
@@ -180,7 +180,25 @@ filter {
           id => "ruby_miscbeat_network_details_sum"
           code => "
             if interfaces = event.get('[miscbeat][network][details]') then
+              bytes_tx, bytes_rx, packets_tx, packets_rx, errors_tx, errors_rx = 0, 0, 0, 0, 0, 0
+              interfaces.each do |key, value|
+                bytes_tx = bytes_tx + value.dig('tx', 'bytes').to_i
+                bytes_rx = bytes_rx + value.dig('rx', 'bytes').to_i
+                packets_tx = packets_tx + value.dig('tx', 'packets').to_i
+                packets_rx = packets_rx + value.dig('rx', 'packets').to_i
+                errors_tx = errors_tx + value.dig('tx', 'errors').to_i
+                errors_rx = errors_rx + value.dig('rx', 'errors').to_i
+              end
               event.set('[miscbeat][network][interface]', interfaces.keys)
+              event.set('[miscbeat][network][bytes][tx]', bytes_tx)
+              event.set('[miscbeat][network][bytes][rx]', bytes_rx)
+              event.set('[miscbeat][network][bytes][total]', bytes_tx+bytes_rx)
+              event.set('[miscbeat][network][packets][tx]', packets_tx)
+              event.set('[miscbeat][network][packets][rx]', packets_rx)
+              event.set('[miscbeat][network][packets][total]', packets_tx+packets_rx)
+              event.set('[miscbeat][network][errors][tx]', errors_tx)
+              event.set('[miscbeat][network][errors][rx]', errors_rx)
+              event.set('[miscbeat][network][errors][total]', errors_tx+errors_rx)
             end"
          }
       }
