--- a/sensor-iso/interface/sensor_ctl/supervisor.d/fluentbit-metrics.conf
+++ b/sensor-iso/interface/sensor_ctl/supervisor.d/fluentbit-metrics.conf
@@ -1,6 +1,5 @@
 [group:fluentbit-metrics]
-programs=cpu,disk,mem,mem_p
-#,netif
+programs=cpu,disk,df,mem,mem_p
 
 [program:cpu]
 command=/opt/fluent-bit/bin/fluent-bit
@@ -57,6 +56,24 @@ command=/opt/fluent-bit/bin/fluent-bit
   -F modify -p "Hard_rename=exec Mem.used_p" -m '*'
   -F nest -p Operation=nest -p Nested_under=mem -p WildCard='*' -m '*'
   -F record_modifier -p "Record=module mem" -m '*'
+  -f 1
+startsecs=20
+startretries=3
+stopasgroup=true
+killasgroup=true
+autostart=%(ENV_AUTOSTART_FLUENTBIT_METRICS)s
+
+[program:df]
+command=/opt/fluent-bit/bin/fluent-bit
+  -R /etc/fluent-bit/parsers.conf
+  -i exec
+  -p "command= /usr/local/bin/df-json.sh"
+  -p parser=json
+  -p Interval_Sec=%(ENV_FLUENTBIT_METRICS_INTERVAL)s
+  -o tcp://localhost:%(ENV_MISCBEAT_PORT)s
+  -p format=json_lines
+  -F nest -p Operation=nest -p Nested_under=disk -p WildCard='*' -m '*'
+  -F record_modifier -p "Record=module disk" -m '*'
   -f 1
 startsecs=20
 startretries=3
