sensor fluentbit work in progress

--- a/logstash/pipelines/beats/11_beats_logs.conf
+++ b/logstash/pipelines/beats/11_beats_logs.conf
@@ -161,6 +161,126 @@ filter {
 
     } # if ([miscbeat][kmsg])
 
+    if ([miscbeat][cpu]) {
+      #-------------------------------------------------
+      # cpu - https://docs.fluentbit.io/manual/pipeline/inputs/cpu-metrics
+
+      if (![event][hash]) {
+        fingerprint {
+          id => "fingerprint_malcolm_miscbeat_cpu"
+          source => [ "[host][name]",
+                      "[event][module]",
+                      "[miscbeat][cpu][cpu_p]",
+                      "[miscbeat][cpu][system_p]",
+                      "[miscbeat][cpu][user_p]",
+                      "[@timestamp]" ]
+          concatenate_sources => true
+          # uses event.hash
+          ecs_compatibility => "v8"
+          method => "MURMUR3_128"
+          base64encode => true
+        }
+      }
+
+    } # if ([miscbeat][cpu])
+
+    if ([miscbeat][mem]) {
+      #-------------------------------------------------
+      # mem - https://docs.fluentbit.io/manual/pipeline/inputs/memory-metrics
+
+      if (![event][hash]) {
+
+        if ([miscbeat][mem][Mem][used]) {
+          fingerprint {
+            id => "fingerprint_malcolm_miscbeat_mem_total"
+            source => [ "[host][name]",
+                        "[event][module]",
+                        "[miscbeat][mem][Mem][used]",
+                        "[miscbeat][mem][Mem][free]",
+                        "[miscbeat][mem][Mem][total]",
+                        "[@timestamp]" ]
+            concatenate_sources => true
+            # uses event.hash
+            ecs_compatibility => "v8"
+            method => "MURMUR3_128"
+            base64encode => true
+          }
+        } else if ([miscbeat][mem][Mem][used_p]) {
+          fingerprint {
+            id => "fingerprint_malcolm_miscbeat_mem_used_p"
+            source => [ "[host][name]",
+                        "[event][module]",
+                        "[miscbeat][mem][Mem][used_p]",
+                        "[@timestamp]" ]
+            concatenate_sources => true
+            # uses event.hash
+            ecs_compatibility => "v8"
+            method => "MURMUR3_128"
+            base64encode => true
+          }
+        }
+      }
+
+    } # if ([miscbeat][mem])
+
+    if ([miscbeat][disk]) {
+      #-------------------------------------------------
+      # disk - https://docs.fluentbit.io/manual/pipeline/inputs/disk-io-metrics
+
+      if ([miscbeat][disk][df][details]) {
+        ruby {
+          id => "ruby_miscbeat_disk_df_sum"
+          code => "
+            if dfentries = event.get('[miscbeat][disk][df][details]') then
+              size, used, avail = 0, 0, 0
+              dfentries.each do |dfentry|
+                size = size + dfentry.dig('size').to_i
+                used = used + dfentry.dig('used').to_i
+                avail = avail + dfentry.dig('avail').to_i
+              end
+              event.set('[miscbeat][disk][df][size]', size)
+              event.set('[miscbeat][disk][df][used]', used)
+              event.set('[miscbeat][disk][df][avail]', avail)
+            end"
+        }
+      }
+
+      if (![event][hash]) {
+
+        if ([miscbeat][disk][read_size]) and ([miscbeat][disk][write_size]) {
+          fingerprint {
+            id => "fingerprint_malcolm_miscbeat_disk_read_write"
+            source => [ "[host][name]",
+                        "[event][module]",
+                        "[miscbeat][disk][read_size]",
+                        "[miscbeat][disk][write_size]",
+                        "[@timestamp]" ]
+            concatenate_sources => true
+            # uses event.hash
+            ecs_compatibility => "v8"
+            method => "MURMUR3_128"
+            base64encode => true
+          }
+        } else {
+          fingerprint {
+            id => "fingerprint_malcolm_miscbeat_disk"
+            source => [ "[host][name]",
+                        "[event][module]",
+                        "[miscbeat][disk][df][size]",
+                        "[miscbeat][disk][df][used]",
+                        "[miscbeat][disk][df][avail]",
+                        "[@timestamp]" ]
+            concatenate_sources => true
+            # uses event.hash
+            ecs_compatibility => "v8"
+            method => "MURMUR3_128"
+            base64encode => true
+          }
+        }
+      } # ![event][hash]
+
+    } # if ([miscbeat][disk])
+
     if ([miscbeat][netif]) {
       #-------------------------------------------------
       # netif - https://docs.fluentbit.io/manual/pipeline/inputs/network-io-metrics
@@ -201,6 +321,23 @@ filter {
               event.set('[miscbeat][network][errors][total]', errors_tx+errors_rx)
             end"
          }
+      }
+
+      if (![event][hash]) {
+        fingerprint {
+          id => "fingerprint_malcolm_miscbeat_netif"
+          source => [ "[host][name]",
+                      "[event][module]",
+                      "[miscbeat][network][bytes][total]",
+                      "[miscbeat][network][packets][total]",
+                      "[miscbeat][network][errors][total]",
+                      "[@timestamp]" ]
+          concatenate_sources => true
+          # uses event.hash
+          ecs_compatibility => "v8"
+          method => "MURMUR3_128"
+          base64encode => true
+        }
       }
 
     } # if ([miscbeat][netif])
