replace metricbeat with fluentbit

--- a/logstash/pipelines/beats/11_beats_logs.conf
+++ b/logstash/pipelines/beats/11_beats_logs.conf
@@ -48,28 +48,6 @@ filter {
     mutate { id => "mutate_replace_agent_type_beats_filebeat_nginx"
              replace => { "[agent][type]" => "nginx" } }
 
-  } else if ([agent][type] == "metricbeat") {
-    #############################################################################################################################
-    # metricbeat statistics (todo: soon to be replaced by fluentbit)
-
-    if (![event][hash]) {
-      fingerprint {
-        id => "fingerprint_malcolm_beats_metricbeat"
-        source => [ "[host][name]",
-                    "[event][module]",
-                    "[event][dataset]",
-                    "[metricset][name]",
-                    "[metricset][period]",
-                    "[process][pid]",
-                    "[@timestamp]" ]
-        concatenate_sources => true
-        # uses event.hash
-        ecs_compatibility => "v8"
-        method => "MURMUR3_128"
-        base64encode => true
-      }
-    }
-
   } else if ("_malcolm_miscbeat" in [tags]) {
     #############################################################################################################################
     # misc. sensor metrics and logs from fluentbit received by protologbeat TCP
@@ -408,6 +386,6 @@ filter {
 
     } # if ([miscbeat][syslog])
 
-  } # event type (filebeat.nginx, metricbeat, miscbeat, etc)
+  } # event type (filebeat.nginx, miscbeat, etc)
 
 }
